--- a/Notebooks/pointer_net.ipynb
+++ b/Notebooks/pointer_net.ipynb
@@ -36,7 +36,7 @@
         "outputId": "72fa8aff-a3c9-42fc-d2d4-d2b05a433393"
       },
       "source": [
-        "!git clone https://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@github.com/Masum06/Indigenous-NMT.git"
+        "!git clone https://github.com/Masum06/Indigenous-NMT.git"
       ],
       "execution_count": null,
       "outputs": [
