--- a/Notebooks/pointer_net_test.ipynb
+++ b/Notebooks/pointer_net_test.ipynb
@@ -36,7 +36,7 @@
         "outputId": "35499310-e284-41ec-b1fc-d3108661e102"
       },
       "source": [
-        "!git clone https://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@github.com/Masum06/Indigenous-NMT.git"
+        "!git clone https://github.com/Masum06/Indigenous-NMT.git"
       ],
       "execution_count": 1,
       "outputs": [
